# views_project

./: CMakeLists.txt  README.md  holamellamotono.cpp
src/: a.out  main.cpp  test
src/Classes/: Episodes.cpp  Episodes.h  Movies.cpp  Movies.h  Series.cpp  Series.h  Video.cpp  Video.h  Video2.cpp  Video2.h
src/Data/: Episodios.txt  Peliculas.txt  Series.txt
